réduction de la taille du test

--- a/casse-noisettes.html
+++ b/casse-noisettes.html
@@ -46,6 +46,7 @@
 <tr><td>TOTAL_BOUCLE</td><td><BOUCLE_TOTAL_BOUCLE(AUTEURS)> #TOTAL_BOUCLE</BOUCLE_TOTAL_BOUCLE></td></tr>
 <tr><td>COMPTEUR_BOUCLE</td><td><BOUCLE_COMPTEUR_BOUCLE(AUTEURS)> #COMPTEUR_BOUCLE</BOUCLE_COMPTEUR_BOUCLE></td></tr>
 <tr><td>EXPOSER</td><td><BOUCLE_EXPOSER(ARTICLES){1,1}> #EXPOSER</BOUCLE_EXPOSER></td></tr>
+<tr><td>0:TITRE</td><td><BOUCLE0(RUBRIQUES){1,1}><BOUCLE_TITRE(ARTICLES){1,1}>#0:TITRE</BOUCLE_TITRE></BOUCLE0></td></tr>
 </table>
 <hr />
 <table border='1' width='100%'>
@@ -53,7 +54,7 @@
 <tr><td>FORMULAIRE_SITE</td><td><BOUCLE_FORMULAIRE_SITE(RUBRIQUES){0,1}> #FORMULAIRE_SITE</BOUCLE_FORMULAIRE_SITE></td></tr>
 <tr><td>FORMULAIRE_ECRIRE_AUTEUR</td><td><BOUCLE_FORMULAIRE_ECRIRE_AUTEUR(AUTEURS){0,1}> #FORMULAIRE_ECRIRE_AUTEUR</BOUCLE_FORMULAIRE_ECRIRE_AUTEUR></td></tr>
 <tr><td>FORMULAIRE_SIGNATURE</td><td>
-<?php <BOUCLE_FORMULAIRE_SIGNATURE(ARTICLES)>if ("[(#FORMULAIRE_SIGNATURE|strlen)]")  $x='#ID_ARTICLE';</BOUCLE_FORMULAIRE_SIGNATURE><BOUCLE_FORMULAIRE_SIGNATURE2(ARTICLES)> if ($x == "#ID_ARTICLE") {?> #FORMULAIRE_SIGNATURE <?}</BOUCLE_FORMULAIRE_SIGNATURE2>  ?></td></tr>
+<?php <BOUCLE_FORMULAIRE_SIGNATURE(ARTICLES)>[if (!$vu && (#FORMULAIRE_SIGNATURE|strlen)) {$vu = true; echo?>#FORMULAIRE_SIGNATURE<?php ;}]</BOUCLE_FORMULAIRE_SIGNATURE> ?></td></tr>
 </table>
 <hr />
 <table border='1' width='100%'>
